@@ -24,7 +24,6 @@ import org.testcontainers.containers.BindMode;
 import org.testcontainers.containers.Container;
 import org.testcontainers.containers.GenericContainer;
 import org.testcontainers.containers.wait.strategy.HttpWaitStrategy;
-import org.testcontainers.containers.wait.strategy.Wait;
 import org.testcontainers.containers.wait.strategy.WaitAllStrategy;
 import org.testcontainers.images.builder.ImageFromDockerfile;
 import org.testcontainers.utility.MountableFile;
@@ -38,7 +37,6 @@ import java.nio.file.attribute.PosixFilePermissions;
 import java.time.Duration;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import static java.time.temporal.ChronoUnit.SECONDS;
@@ -170,6 +168,8 @@ public class NodeContainerFactory {
             container.withEnv("DEVELOPMENT", "true");
         }
 
+        config.proxiedRequestsTimeout.ifPresent(proxiedRequestsTimeout -> container.withEnv("GRAYLOG_PROXIED_REQUESTS_DEFAULT_CALL_TIMEOUT", proxiedRequestsTimeout));
+
         pluginJars.forEach(hostPath -> {
             if (Files.exists(hostPath)) {
                 final Path containerPath = Paths.get(GRAYLOG_HOME, "plugin", hostPath.getFileName().toString());
@@ -202,7 +202,7 @@ public class NodeContainerFactory {
                 .stream()
                 .map(e -> e.startsWith(FEATURE_PREFIX) ? e : String.join("_", FEATURE_PREFIX, e))
                 .map(e -> e.toUpperCase(Locale.ENGLISH))
-                .collect(Collectors.toList());
+                .toList();
 
         for (String name : prefixed) {
             container.withEnv(name, "on");
